--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "study html, css",
   "main": "sign-up.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node sign-up.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,18 +17,9 @@
   },
   "homepage": "https://github.com/0129jonsu/instagram-webpage_clone-coding#readme",
   "dependencies": {
-    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-mysql-session": "^2.1.8",
-    "express-session": "^1.17.3",
     "mysql": "^2.18.1",
-    "path": "^0.12.7",
     "puppeteer": "^19.2.2"
-  },
-  "engines": {
-    "node": "18.12.1",
-    "npm": "8.19.2"
   }
-
 }
